Añade footer por fidelidad al wireframe

--- a/heraldica/templates/base.html
+++ b/heraldica/templates/base.html
@@ -136,6 +136,10 @@
         </header>
         
         {% block content %}{% endblock %}
+        
+        <footer>
+            <p>Trabajo de Fin de Grado - Universidad de Granada</p>
+        </footer>
     </main>
 </body>
 </html>
